chore: 清理过期 AppConfig 引用 + 内存优化 & 代码质量改进
- 清理全部遗留的 AppConfig javadoc/注释引用（SRP 拆分后已移除）
- RenderConfig.TILE_BUFFER_MULTIPLIER 3.0→1.5，减少瓦片预加载量
- ResourceInitService 瓦片验证后触发 System.gc() 回收暂态大图内存
- TileGeneratorService 日志区分"校验跳过"与"实际生成"
- SocketServer: socket-recv 改用虚拟线程，onMessage 去掉冗余虚拟线程包装
- NativeProcess.PipeInputStream 改为 static class，避免外部类引用泄漏
- HookContainer lambda 未用参数改用 _
- StatsOverlay setVisible/setManaged 简化（if-else → 直接赋值）